/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.4.1/userguide/building_java_projects.html in the Gradle documentation.
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // This dependency is used by the application.
    // implementation libs.guava

    implementation platform('org.apache.logging.log4j:log4j-bom:2.25.4')

    implementation 'org.apache.logging.log4j:log4j-api:2.25.4'
    implementation 'org.apache.logging.log4j:log4j-core:2.25.4'

    implementation("org.junit.jupiter:junit-jupiter:6.1.0-M1")
    implementation("org.junit.jupiter:junit-jupiter-api:6.1.0-M1")
    implementation("org.junit.jupiter:junit-jupiter-engine:6.1.0-M1")
    implementation("org.junit.jupiter:junit-jupiter-params:6.1.0-M1")

    // Source: https://mvnrepository.com/artifact/org.antlr/antlr4-runtime
    implementation("org.antlr:antlr4-runtime:4.13.2")

    implementation 'org.jetbrains:annotations:26.1.0'

    runtimeOnly 'org.apache.logging.log4j:log4j-core'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'org.example.App'
}
